1999-01-25  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garnam.adb: Another enhancement for "localhost".

1999-01-22  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gartcp.adb (Initialize): Do not use "localhost" directly
	but translate it into the offical name.

1999-01-12  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.adb: Fix unitialized level problem in
 	Adv_Mutex_Type. Fixes 0004-G02.

1998-12-29  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gaphlo.ads, s-gaphlo.adb: Remove memory leaks by making
	Location_Type a controlled type. This type is used when connecting 
	to a new partition, so the penalty won't be unaffordable.

1998-12-28  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gardeb.adb: Deallocate string returned by Getenv after use.

	* s-gastha.adb: Fix two obvious bugs found by code reading. Pool
	mutexes were allocated many times and deallocated many times.

1998-12-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gardeb.adb, s-gardeb.ads: Change debugging facilities. Reduce
	to only one debugging level. A debugging env variable has be set
	to "true" to be active.
	
	* all files: Adapt to new debugging facilities.

	* s-rpc.adb, s-parint.adb: Debugging facilities are always present 
	even when GLADE ws not configured with --enable-debug.

1998-12-16  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garthi.ads: Fix some design mistakes that have been here for
	years now using dynamic allocations.

	* s-garnam.adb: Use as few dynamic allocation as possible.

1998-12-15  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gartcp.adb: Add comments in Initialize.

	* s-garnam.adb, s-garnam.ads: Fix a problem on DecAlpha because
 	host entry names are not always in lower case on this system.

1998-12-14  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garuni.adb: Use new Broadcast function.

	* s-garstr.adb: (Deallocate): avoid code duplication when freeing
	an access to stream.

	* s-garhea.adb: (Send_Boot_Server): avoid dynamic allocation of
	the stream copy.